// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conversion createClass -> createClassCode 1`] = `
"const ConnectLabel10 = connect(
    [user],
    state=>{ return {
      ... getData(state, 'data', user, 'data'),
    }},
    mutations => { return {}}
  )(Label); class ChildPadComponent1 extends React.Component {
      render(){
        return (
          <React.Fragment>
            <div style={{position: 'absolute',display: 'flex', width: 72,
        height: 21, zIndex: '4000', 
         left: 92 + 'px', top: 67 + 'px' }}
        ><Theme config={{'aaa':themeHandle('aaa',undefined, {\\"width\\":100,\\"height\\":100}, false)}}><ConnectLabel10  viewClass=\\"aaa\\" children={  \`高级表单\` } value={  \`高级表单\` } fontSize={ 18 } color={  \`#50575d\` } /></Theme></div>
          </React.Fragment>
        );
      }
    };"
`;

exports[`conversion createClass -> createLayerComponent 1`] = `
"<div style={{position: 'absolute',display: 'flex', width: 72,
        height: 21, zIndex: '4000', 
         left: 92 + 'px', top: 67 + 'px' }}
        ><Theme config={{'aaa':themeHandle('aaa',undefined, {\\"width\\":100,\\"height\\":100}, false)}}><ConnectLabel10  viewClass=\\"aaa\\" children={  \`高级表单\` } value={  \`高级表单\` } fontSize={ 18 } color={  \`#50575d\` } /></Theme></div>"
`;

exports[`conversion createClass -> createLayerComponent 2`] = `
"const ConnectLabel10 = connect(
    [user],
    state=>{ return {
      ... getData(state, 'data', user, 'data'),
    }},
    mutations => { return {}}
  )(Label);"
`;

exports[`conversion createClass -> createLayerComponent 3`] = `
"<div style={{position: 'absolute',display: 'flex', width: 72,
        height: 21, zIndex: '4000', 
         left: 92 + 'px', top: 67 + 'px' }}
        ><Theme config={{'aaa':themeHandle('aaa',undefined, {\\"width\\":100,\\"height\\":100}, false)}}><Label  viewClass=\\"aaa\\" children={  \`高级表单\` } value={  \`高级表单\` } fontSize={ 18 } color={  \`#50575d\` } /></Theme></div>"
`;

exports[`conversion createClass -> createLayerComponent 4`] = `""`;
